--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@tailwindcss/forms": "^0.5.3",
+    "@tanstack/react-query": "^4.29.5",
+    "@tanstack/react-query-devtools": "^4.29.6",
+    "axios": "^1.4.0",
     "formik": "^2.2.9",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.10.0",
     "swiper": "^9.2.4",
     "uuid": "^9.0.0",
@@ -33,6 +38,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.1",
+    "tailwindcss-animate": "^1.0.5",
     "typescript": "^5.0.2",
     "vite": "^4.3.0"
   }
