--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^4.29.5",
     "@tanstack/react-query-devtools": "^4.29.6",
     "axios": "^1.4.0",
+    "clsx": "^1.2.1",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
     "query-string": "^8.1.0",
