--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.10.0",
+    "react-star-ratings": "^2.3.0",
     "swiper": "^9.2.4",
     "uuid": "^9.0.0",
     "yup": "^1.1.1"
