--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Jersy-Hub",
+  "name": "jersy-hub",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-laravel-paginex": "^2.0.8",
     "react-router-dom": "^6.10.0",
     "react-star-ratings": "^2.3.0",
     "swiper": "^9.2.4",
