--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-laravel-paginex": "^2.0.8",
     "react-router-dom": "^6.10.0",
     "react-star-ratings": "^2.3.0",
+    "recharts": "^2.7.1",
     "swiper": "^9.2.4",
     "uuid": "^9.0.0",
     "yup": "^1.1.1"
