--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "recharts": "^2.7.1",
     "swiper": "^9.2.4",
     "uuid": "^9.0.0",
-    "yup": "^1.1.1"
+    "yup": "^1.1.1",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
